# SmartHHC

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Krivi.ods  Krivi.xlsm  README.md  SerialCommand.cpp  SerialCommand.h  SmartHHC.pro  TODO.md  Untitled 2.ods  button.cpp  button.h  configuration.h  define.h  eeprom.h  fixed.cpp  fixed.h  git-version.h  hc.cpp  hc.h  innosetup.iss  learn.cpp  learn.h  make-git-version.sh  mcp.cpp  mcp.h  measure.cpp  measure.h  pwm_led.cpp  pwm_led.h  smarthhc.ino  smarthhc_fw.ino
.travis/: after_failure.sh  after_success.sh  before_install.sh  before_script.sh  install.sh  script.sh
android/: AndroidManifest.xml
deploy/: deploy.sh  travis.sh
deploy/bundle/linux/: smarthhc.desktop
resources/: about.html  license.html  resources.qrc  thanks.html
resources/icons/: icon.icns
resources/linux/: smarthhc.appdata.xml
resources/translations/: smarthhc_bg.ts  smarthhc_it.qm  smarthhc_it.ts  smarthhc_it_IT.ts
resources/translations/it/: about.html  thanks.html
src/: bluetooth.cpp  bluetooth.h  device.cpp  device.h  main.cpp  serial.cpp  serial.h  settings.h  setup.h
src/ui/: CurveEditor.cpp  CurveEditor.h  CurveEditor.ui  CurvePage.cpp  CurvePage.h  CurveQToolBar.cpp  CurveQToolBar.h  CurveToolBar.cpp  CurveToolBar.h  CurveWidget.cpp  CurveWidget.h  MainWindow.cpp  MainWindow.h  PageAbout.cpp  PageAbout.h  PageAbout.ui  PageConnection.cpp  PageConnection.h  PageConnection.ui  PageHome.cpp  PageHome.h  PageHome.ui  PageTerminal.cpp  PageTerminal.h  PageTerminal.ui  ToolBarCurve.ui  UICurveOld.cpp  UICurveOld.h
src/ui/qaw/: actionbar.cpp  menustyle.cpp  tablayout.h  utils.h
src/ui/qsw/: actionbar.cpp  actionbar.h  levelbar.cpp  levelbar.h  menustyle.cpp  menustyle.h  spinbox.cpp  spinbox.h  tablayout.cpp  tablayout.h  utils.h
